# middleware/validate.js
@@ -1,14 +1,12 @@
 const validator = require("../helpers/validate");
 
-const storeEmployee = (req, res, next) => {
+const storeUser = (req, res, next) => {
   const validationRule = {
-    empId: "required|string",
-    position: "required|string",
-    department: "required|string",
-    salary: "required|numeric",
-    birthdate: "required|date",
-    empDate: "required|string",
-    empStatus: "required|string",
+    email: "required|email",
+    fullName: "required|string",
+    birthDate: "required|date",
+    address: "required|string",
+    biography: "required|string",
   };
   validator(req.body, validationRule, {}, (err, status) => {
     if (!status) {
@@ -23,12 +21,50 @@ const storeEmployee = (req, res, next) => {
   });
 };
 
-const storeUser = (req, res, next) => {
+const storeAuthor = (req, res, next) => {
   const validationRule = {
-    firstName: "required|string",
-    lastName: "required|string",
-    email: "required|email",
-    password: "required|string|min:8",
+    userId: "required|string",
+    booksPublished: "required|boolean",
+  };
+  validator(req.body, validationRule, {}, (err, status) => {
+    if (!status) {
+      res.status(412).send({
+        success: false,
+        message: "Validation failed",
+        data: err,
+      });
+    } else {
+      next();
+    }
+  });
+};
+
+const storeGenre = (req, res, next) => {
+  const validationRule = {
+    name: "required|string",
+    description: "required|string",
+  };
+  validator(req.body, validationRule, {}, (err, status) => {
+    if (!status) {
+      res.status(412).send({
+        success: false,
+        message: "Validation failed",
+        data: err,
+      });
+    } else {
+      next();
+    }
+  });
+};
+
+const storeBook = (req, res, next) => {
+  const validationRule = {
+    title: "required|string",
+    authorId: "required|string",
+    genreId: "required|date",
+    publicationYear: "required|integer",
+    isbn: "required|string",
+    isAvailable: "required|boolean",
   };
   validator(req.body, validationRule, {}, (err, status) => {
     if (!status) {
@@ -45,5 +81,7 @@ const storeUser = (req, res, next) => {
 
 module.exports = {
   storeUser,
-  storeEmployee,
+  storeAuthor,
+  storeGenre,
+  storeBook,
 };
